# SpindleGraph

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/spindlegraph/: cli.py  config.py  db.py  events.py  graph.py  importer.py  main.py  reconcile.py
backend/spindlegraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/spindlegraph/api/: routes.py
backend/spindlegraph/orchestrator/: executors.py  jobs.py  worktrees.py
backend/tests/: conftest.py  fake_claude.py  fake_local.py  test_graph.py  test_importer.py  test_orchestrator_api.py  test_reconcile.py  test_v2.py
commands/: build-batch.md  build.md  feedback.md  spec-chat.md  spec.md  triage.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SPEC.md  USER-GUIDE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: demo.spec.ts  env.ts  setup.mjs
frontend/src/: App.tsx  api.ts  index.css  main.tsx  ws.ts
frontend/src/views/: AddProject.tsx  Board.tsx  Config.tsx  DependencyEdge.tsx  FloatingEdge.tsx  GraphView.tsx  Reconcile.tsx  RiskChip.tsx  Runner.tsx  SpecChat.tsx  SpecDrawer.tsx  layout.ts
