[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spindlegraph"
version = "0.2.0"
description = "Local GUI control plane that orchestrates coding agents to build software from specs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
spindlegraph = "spindlegraph.cli:main"

[tool.setuptools.packages.find]
include = ["spindlegraph*"]

[tool.setuptools.package-data]
spindlegraph = ["static/**/*"]
